# STM32N6-GettingStarted-FaceDetection-main

./: .gitignore  README.md
STM32N6-GettingStarted-FaceDetection-main/: CHANGE_REPORT_FACEDETECTION_CMAKE_MIGRATION.md  CMakeLists.txt  CMakePresets.json  build_and_flash.bat  gcc-arm-none-eabi.cmake
STM32N6-GettingStarted-FaceDetection-main/Application/NUCLEO-N657X0-Q/Inc/: app_config.h
STM32N6-GettingStarted-FaceDetection-main/Application/STM32N6570-DK/Inc/: app_config.h  mylogo.h
STM32N6-GettingStarted-FaceDetection-main/Application/STM32N6570-DK/Src/: main.c
